--- a/project_brief.scss
+++ b/project_brief.scss
@@ -2,7 +2,23 @@
 
 .home-brief {
     padding-bottom: 1rem;
+//    height: 100%;
+}
+
+.fullheight {
     height: 100%;
+}
+
+.smrow {
+    height: 23.62%;
+}
+
+.goldenheight {
+    height: 61.72%;
+}
+
+.lgrow {
+    height: 61.72%;
 }
 
 .home-project-title {
@@ -22,7 +38,7 @@
 .home-project-brief {
     padding-right: 2rem;
     background-color: white;
-    opacity: 0.8;
+//    opacity: 0.8;
     height: 100%;
 }
 
@@ -36,4 +52,21 @@
     background-repeat: no-repeat;
     position: relative;
     margin-top: 2rem;
+}
+
+.parallax {
+    background-attachment: fixed;
+    background-size: auto;
+}
+
+@media (max-height: 990px) {
+    .parallax {
+        height: 940px;
+    }
+}
+
+@media (max-height: 768px) {
+    .parallax {
+    height: 768px - 50px;
+    }
 }
