--- a/work.css
+++ b/work.css
@@ -42,7 +42,7 @@
 
 /* line 16, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .goldenheight {
-  height: 54%; }
+  height: 61.72%; }
 
 /* line 20, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .lgrow {
@@ -248,45 +248,44 @@ body {
   font-style: normal; }
 
 /* Tufte CSS styles */
-/* line 11, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 16, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 html {
-  font-size: 15px; }
+  font-size: 15px;
+  text-rendering: optimizeLegibility; }
 
-/* line 15, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 21, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 body {
   color: rgba(0, 0, 0, 0.8);
   counter-reset: sidenote-counter; }
 
-/* line 21, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 28, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h1 {
   font-family: "ff-tisa-web-pro", serif;
   font-weight: 400;
-  margin-top: 4rem;
-  margin-bottom: 1.5rem;
+  margin-top: 4.2rem;
+  margin-bottom: 1rem;
   font-size: 3.2rem;
   line-height: 1; }
 
-/* line 29, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 36, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h2 {
   font-family: "ff-tisa-web-pro", serif;
   font-style: italic;
   font-weight: 400;
   margin-top: 2.1rem;
-  margin-bottom: 0;
   font-size: 2.2rem;
   line-height: 1; }
 
-/* line 38, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 44, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h3 {
   font-family: "ff-tisa-web-pro", serif;
   font-style: italic;
   font-weight: 400;
   font-size: 1.7rem;
-  margin-top: 2rem;
-  margin-bottom: 0;
-  line-height: 1; }
+  margin-top: 2.0rem;
+  line-height: 1.23; }
 
-/* line 47, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 52, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article hr {
   display: block;
   height: 1px;
@@ -296,7 +295,7 @@ article hr {
   margin: 1em 0;
   padding: 0; }
 
-/* line 58, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 63, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 p.subtitle {
   font-style: italic;
   margin-top: 1rem;
@@ -305,81 +304,92 @@ p.subtitle {
   display: block;
   line-height: 1; }
 
-/* line 67, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 72, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .numeral {
   font-family: et-book-roman-old-style; }
 
-/* line 71, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 76, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .danger {
   color: red; }
 
-/* line 75, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 80, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   position: relative;
   padding: 5rem 0rem; }
 
-/* line 80, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 85, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Chapter Epigraphs */
   /* end chapter epigraphs styles */
   /* Links: replicate underline that clears descenders */ }
-  /* line 81, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 86, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
     padding-top: 1rem;
     padding-bottom: 1rem; }
-  /* line 85, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 90, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article ol,
   article ul {
     font-size: 1.2rem; }
-  /* line 90, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 95, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     font-family: "ff-tisa-web-pro", serif !important;
-    line-height: 2.1rem;
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
+    font-weight: 400;
+    line-height: 1.75;
+    margin-top: 2.1rem;
+    margin-bottom: 0;
     padding-right: 0;
     vertical-align: baseline; }
-  /* line 99, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 105, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  article p + p {
+    margin-top: 0;
+    text-indent: 2.1rem; }
+  /* line 110, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  article br {
+    line-height: 2.1rem; }
+  /* line 115, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 102, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 118, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
-    margin-top: 3em;
-    margin-bottom: 3em; }
-  /* line 106, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    margin-top: 2.1rem;
+    margin-bottom: 2.1rem; }
+  /* line 122, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 110, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 126, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 113, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 129, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 117, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 133, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 121, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 137, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 60%;
     margin-right: 40px; }
-  /* line 125, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 141, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
-    width: 60%;
-    font-size: 1.1rem;
-    text-align: right; }
-  /* line 130, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    margin-top: 2.1rem;
+    width: 60% !important;
+    font-size: 1.1rem !important;
+    text-align: right !important;
+    font-family: "ff-tisa-web-pro", serif;
+    color: inherit; }
+  /* line 149, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 136, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 155, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0; }
-  /* line 139, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 158, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -389,8 +399,8 @@ article {
     max-width: 55%;
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
-    margin: 0 0 3em 0; }
-  /* line 150, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    margin: 2.1rem 0 2.1rem 0; }
+  /* line 169, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -401,14 +411,14 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 161, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 180, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 165, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 184, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 169, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 188, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -421,25 +431,25 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 183, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 202, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 188, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 207, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 189, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 208, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 194, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 213, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 202, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 221, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 206, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 225, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -452,132 +462,133 @@ article {
     line-height: 1.3;
     vertical-align: baseline;
     position: relative; }
-  /* line 220, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 239, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 224, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 243, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 232, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 251, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 239, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 258, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 244, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 263, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 251, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 270, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article table {
     width: 65%; }
-  /* line 257, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 276, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 262, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 267, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 286, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 272, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 291, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: white; }
-  /* line 280, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 299, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 284, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 303, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 290, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 309, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 295, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 314, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
+    margin-top: 2.1rem;
     margin-left: 2.5%;
     border: none !important;
     background-color: white;
     overflow-x: auto; }
-  /* line 304, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 324, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 308, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 328, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 313, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 318, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 338, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 322, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 342, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 326, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 346, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 @media (max-width: 760px) {
-  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 353, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   p,
   footer {
     width: 100%; }
-  /* line 337, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 357, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   pre.code {
     width: 97%; }
-  /* line 340, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 360, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   ul {
     width: 85%; }
-  /* line 343, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 363, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   figure {
     max-width: 90%; }
-  /* line 346, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 366, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   figcaption,
   figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 351, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 355, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 375, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   blockquote p,
   blockquote footer {
     width: 100%; }
-  /* line 359, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 379, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 362, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 382, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   .sidenote,
   .marginnote {
     display: none; }
-  /* line 366, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 386, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   .margin-toggle:checked + .sidenote,
   .margin-toggle:checked + .marginnote {
     display: block;
@@ -588,14 +599,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 377, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 397, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   label {
     cursor: pointer; }
-  /* line 380, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 400, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   div.table-wrapper,
   table {
     width: 85%; }
-  /* line 384, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 404, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   img {
     width: 100%; } }
 
