--- a/tufte2.css
+++ b/tufte2.css
@@ -192,14 +192,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 180, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 181, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  article figure.fullwidth {
+    margin-top: 2.1rem; }
+  /* line 185, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 184, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 189, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 188, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 193, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -212,25 +215,25 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 202, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 207, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 207, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 212, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 208, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 213, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 213, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 218, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 221, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 225, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 230, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -238,74 +241,74 @@ article {
     margin-right: -70%;
     width: 60%;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 2.1rem;
     font-size: 1.1rem;
     line-height: 1.3;
     vertical-align: baseline;
     position: relative; }
-  /* line 239, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 244, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 243, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 248, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 251, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 256, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 258, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 263, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 263, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 268, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 270, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 275, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article table {
     width: 65%; }
-  /* line 276, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 286, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 286, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 291, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 291, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 296, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: white; }
-  /* line 299, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 304, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 303, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 308, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 309, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 314, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 314, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 319, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
@@ -314,62 +317,62 @@ article {
     border: none !important;
     background-color: white;
     overflow-x: auto; }
-  /* line 324, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 329, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 328, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 338, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 338, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 343, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 342, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 347, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 346, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 351, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 @media (max-width: 760px) {
-  /* line 353, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 358, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   p,
   footer {
     width: 100%; }
-  /* line 357, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 362, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   pre.code {
     width: 97%; }
-  /* line 360, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 365, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   ul {
     width: 85%; }
-  /* line 363, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 368, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   figure {
     max-width: 90%; }
-  /* line 366, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   figcaption,
   figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 376, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 375, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 380, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   blockquote p,
   blockquote footer {
     width: 100%; }
-  /* line 379, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 384, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 382, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 387, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   .sidenote,
   .marginnote {
     display: none; }
-  /* line 386, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 391, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   .margin-toggle:checked + .sidenote,
   .margin-toggle:checked + .marginnote {
     display: block;
@@ -380,14 +383,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 397, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 402, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   label {
     cursor: pointer; }
-  /* line 400, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 405, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   div.table-wrapper,
   table {
     width: 85%; }
-  /* line 404, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 409, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   img {
     width: 100%; } }
 
