--- a/navbar.scss
+++ b/navbar.scss
@@ -15,8 +15,8 @@ body {
 }
 
 .navbar-header {
-    margin-left: auto;
-    margin-right: auto;
+//    margin-left: auto;
+//    margin-right: auto;
     font-family: $font-stack;
 }
 
