--- a/tufte2.scss
+++ b/tufte2.scss
@@ -435,3 +435,24 @@ article {
         width: 100%;
     }
 }
+
+/* @group Desktop Only */
+@media only screen and (min-width: 1100px) and (max-width: 1441px) {
+    html {
+        font-size: 15px;
+    }
+}
+
+/* @group Tablets, Small Computers */
+@media only screen and (min-width: 0) and (max-width: 1099px) {
+    html {
+        font-size: 13px;
+    }
+}
+
+/* @group Mobile */
+@media only screen and (min-width: 0) and (max-width: 767px) {
+        html {
+        font-size: 13px;
+    }
+}
